k8s/overlays/prod/ingress-tls-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devsu-demo
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: devsu-demo.andujaronline.uk
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: devsu-demo
                port:
                  number: 80
  tls:
    - hosts:
        - devsu-demo.andujaronline.uk
      secretName: devsu-demo-tls
